Fix iPad display issue (too wide); iPhone display issues on posts (margins too wider and share/tags slid to bottom)

--- a/_includes/css/wndx.scss
+++ b/_includes/css/wndx.scss
@@ -13,17 +13,33 @@ body.not-home { padding-top: 90px; }
   border-top: 3px solid #{{ site.data.template.color.primary }};
 }
 
-.post.row {
-  margin-left: 1em;
-  margin-right: 1em;
+/* Custom, iPhone Retina */
+@media only screen and (min-width : 320px) {
+  .post.row .page-content {
+    margin-top: 1em;
+  }
 }
 
-.post.row .page-content {
-  margin-top: 2em;
+/* Extra Small Devices, Phones */
+@media only screen and (min-width : 480px) {
+  .post.row .page-content {
+    margin-top: 1em;
+  }
 }
 
 .post.row .page-content p {
   font-size: 16px;
+}
+
+@media(min-width:768px) {
+  .post.row {
+    margin-left: 1em;
+    margin-right: 1em;
+  }
+
+  .post.row .page-content {
+    margin-top: 2em;
+  }
 }
 
 .post iframe {
